fix: change iframe loading to lazy and add scrollbar to site

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -6,15 +6,10 @@
 
 html {
     background: radial-gradient(circle at 24.1% 68.8%, rgb(50, 50, 50) 0%, rgb(0, 0, 0) 99.4%);
-  }
-
-  body::-webkit-scrollbar {
-    display: none;
+    font-display: swap;
   }
 
   body {
-    -ms-overflow-y-style: none; 
-    scrollbar-width: none;
     padding-right: 0 !important;  
   }
   @layer base {
